<resources>
    <string name="app_name">Fullscreen004</string>
    <string name="get_size">Get size</string>
    <string name="test_bluethooth">Test Bluethooth</string>
    <string name="test_multiline_text">Test multiline text</string>
    <string name="turn_bt_off">Turn Bluotooth off</string>
    <string name="find_discoverable_devices">Find discoverable devices</string>
    <string name="show_paired_devices">Show paired devices</string>
    <string name="app_name_string">BluetoothTest</string>
</resources>
