<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lukino999.fullscreen004.MainActivity">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/buttonGetSize"
            style="@android:style/Widget.Button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:onClick="buttonGetSizeClick"
            android:text="@string/get_size"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/buttonTestMultilineText"
            style="@android:style/Widget.Button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:onClick="buttonTestMultilineTextClick"
            android:text="@string/test_multiline_text"
            android:layout_below="@+id/buttonGetSize"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/buttonTestBluetooth"
            style="@android:style/Widget.Button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:onClick="buttonTestBluetoothClick"
            android:text="@string/test_bluethooth"
            android:layout_below="@+id/buttonTestMultilineText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <Button
            android:id="@+id/buttonTurnBluetoothOff"
            style="@android:style/Widget.Button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:onClick="buttonTurnBluetoothOffClick"
            android:text="@string/turn_bt_off"
            android:layout_below="@+id/buttonTestBluetooth"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/buttonFindDiscoverableDevices"
            style="@android:style/Widget.Button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:onClick="buttonFindDiscoverableDevicesClick"
            android:text="@string/find_discoverable_devices"
            android:layout_below="@+id/buttonTurnBluetoothOff"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/buttonShowPairedDevices"
            style="@android:style/Widget.Button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:onClick="buttonShowPairedDevicesClick"
            android:text="@string/show_paired_devices"
            android:layout_below="@+id/buttonFindDiscoverableDevices"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ListView
            android:id="@+id/pairedDevicesListView"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/buttonGetSize"
            android:layout_toLeftOf="@+id/scrollView"
            android:layout_toRightOf="@+id/buttonGetSize"
            android:layout_toStartOf="@+id/scrollView" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="640dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:scrollbars="vertical"
            android:fillViewport="true">

            <TextView
                android:id="@+id/textViewLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:ignore="HardcodedText" />
        </ScrollView>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
